Deleted comments. Improved: functions, style of the Form, README.md

--- a/src/templates.scss
+++ b/src/templates.scss
@@ -1,3 +1,8 @@
+%container--centered {
+  display: block;
+  margin: auto;
+}
+
 %cursor-pointer {
   &:hover,
   &:active {
@@ -5,8 +10,8 @@
   }
 }
 
-.button,
-.label,
+button,
+label,
 input[type="submit"] {
   @extend %cursor-pointer;
 }
