Added: components routing, changing titles for pages, BrokenLink-page. Fixed: delete status error bug, favicon, style on resizing. Modified: links for tabs (instead of buttons), naming, info for AboutTab and Readme.

--- a/src/modules/link.scss
+++ b/src/modules/link.scss
@@ -1,9 +1,9 @@
 .link {
-  border-radius: 5px;
   font-weight: bold;
   text-decoration: none;
   color: MediumBlue;
 
   &:hover {color: RoyalBlue;}
   &:active {color: Blue;}
+  &:focus {border-radius: 5px;}
 }
