--- a/src/modules/section.scss
+++ b/src/modules/section.scss
@@ -1,31 +1,31 @@
 .section {
   &__title {
-    margin-top: 10px;
-    padding: 7px 15px 0;
-    border-left: 8px solid MediumAquamarine;
+    margin-top: 0.5em;
+    padding: 0.3em 0.6em 0;
+    border-left: 0.35em solid MediumAquamarine;
     background: linear-gradient(90deg, Wheat, PaleTurquoise);
   }
 
   &__content {
-    margin: 20px 20px 0 15px;
+    margin: 1em 1em 0 0.9em;
     text-align: justify;
   }
 }
 .content {
-  &__p-item {padding-top: 15px;}
+  &__p-item {padding-top: 0.9em;}
   &__p-item:first-child {padding-top: unset;}
 }
 
 @media screen and (min-width: 500px) {
   .section__content {
-    margin-right: 40px;
-    margin-left: 25px;
+    margin-right: 2.2em;
+    margin-left: 1.8em;
   }
 }
 
 @media screen and (min-width: 700px) {
   .section__content {
-    margin-right: 30px;
-    margin-left: 20px;
+    margin-right: 1.85em;
+    margin-left: 1.25em;
   }
 }
