--- a/src/modules/svg.scss
+++ b/src/modules/svg.scss
@@ -1,8 +1,8 @@
 .svg {
-  width: 38px;
-  height: 35px;
-  padding: 3px;
-  border: 2px dotted Purple;
+  width: 2.2em;
+  height: 2.2em;
+  padding: 0.1em;
+  border: 0.15em dotted Purple;
   border-radius: 50%;
   fill: MediumBlue;
   @extend %no-user-select;
