--- a/src/modules/svg.scss
+++ b/src/modules/svg.scss
@@ -5,7 +5,11 @@
   border: 0.15em dotted Purple;
   border-radius: 50%;
   fill: MediumBlue;
-  @extend %no-user-select;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 
   &__svg-link {
     &:hover {fill: RoyalBlue;}
