Fixed: style disadvantages and bugs. Corrected: overall font-size, transitions; content of DataDetails, Readmi.md and AboutTab. Added: accessibility to SlotDetails.

--- a/src/modules/data-input.scss
+++ b/src/modules/data-input.scss
@@ -23,7 +23,7 @@
   }
 }
 
-@media (pointer: fine) {
+@media screen and (pointer: fine) {
   .input {
     &:hover {background-color: LavenderBlush;}
 
