--- a/src/modules/link.scss
+++ b/src/modules/link.scss
@@ -1,7 +1,3 @@
-@media (pointer: fine) {
-  .link:hover {color: RoyalBlue;}
-}
-
 .link {
   font-weight: bold;
   text-decoration: none;
@@ -11,4 +7,8 @@
     border-radius: 0.2em;
     color: Blue;
   }
+}
+
+@media screen and (pointer: fine) {
+  .link:hover {color: RoyalBlue;}
 }
