--- a/src/modules/list.scss
+++ b/src/modules/list.scss
@@ -2,23 +2,33 @@
   &--string {
     list-style-type: none;
 
-    & li:before {padding-right: 0.5em;}
+    & li:before {padding-right: 1em;}
   }
 
   &--roll {margin-left: 1.5em;}
   &--square {list-style-type: square;}
 }
 
+.ol-list {
+  &--roman {
+    list-style-type: upper-roman;
+    & li::marker {font-family: serif;}
+  }
+}
+
+.ul-list,
+.ol-list {
+  &--no-marker {list-style-type: none;}
+}
+
 @media screen and (min-width: 400px) {
   .ul-list {
     &--string {
-      text-align: center;
-
       & li {
         display: inline-block;
 
         &:before {
-          padding-right: 0.3em;
+          padding-right: 0.4em;
           padding-left: 1.3em;
         }
       }
@@ -28,6 +38,6 @@
   }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1024px) {
   .ul-list--roll {margin-left: 4em;}
 }
