--- a/src/modules/section.scss
+++ b/src/modules/section.scss
@@ -1,28 +1,34 @@
 .section {
   &__title {
-    margin-top: 0.5em;
+    margin-top: 0;
+    margin-bottom: 0.5em;
     padding: 0.3em 0.6em 0;
     border-left: 0.35em solid MediumAquamarine;
     background: linear-gradient(90deg, Wheat, PaleTurquoise);
   }
 
-  &__content {text-align: justify;}
-}
-.content {
-  &--article {margin: 1em 1em 0 0.9em;}
-
-  &__p-item {padding-top: 0.9em;}
-  &__p-item:first-child {padding-top: unset;}
+  &--middle {margin-bottom: 0.8em;}
 }
 
-@media screen and (min-width: 500px) {
+.content--article {
+  margin: 1em 1em 0 0.9em;
+
+  & .p-item {padding-top: 0.9em;}
+  & .p-item:first-child {padding-top: unset;}
+}
+
+@media screen and (min-width: 400px) {
+  .section__content {text-align: justify;}
+}
+
+@media screen and (min-width: 800px) {
   .content--article {
     margin-right: 2.2em;
     margin-left: 1.8em;
   }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1024px) {
   .content--article {
     margin-right: 1.85em;
     margin-left: 1.25em;
