Corrected: transitions, style.

--- a/src/modules/section.scss
+++ b/src/modules/section.scss
@@ -7,7 +7,7 @@
     background: linear-gradient(90deg, Wheat, PaleTurquoise);
   }
 
-  &--middle {margin-bottom: 0.8em;}
+  &__content {margin-bottom: 0.8em;}
 }
 
 .content--article {
